--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="settings">Settings</string>
     <string name="history">History</string>
     <string name="speak">Speak</string>
+    <string name="speak_bible">Speak (Bible)</string>
     <string name="help">Help</string>
     <string name="verse">Verse</string>
     <string name="administration">Administration</string>
