--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -265,10 +265,11 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="tts_lang_not_available">Language is not available.</string>
     <string name="speak_queue">Queue</string>
     <string name="speak_repeat">Repeat</string>
-    <string name="speak_continuous">Continuous</string>
 
     <!-- Speak - Bible -->
     <string name="synchronize_first_window">Synchronize first window</string>
+    <string name="speak_book_changed">Book changed to </string>
+    <string name="speak_chapter_changed">Chapter </string>
 
     <!-- User Notes -->
     <string name="mynotes">My Notes</string>
