--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -269,7 +269,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <!-- Speak - Bible -->
     <string name="conf_synchronize_first_window">Synchronize first window</string>
     <string name="conf_speak_chapter_changes">Speak chapter changes</string>
-    <string name="speak_book_changed">Book changed to</string>
+    <string name="speak_book_changed">Book changed</string>
     <string name="speak_chapter_changed">Chapter</string>
     <string name="conf_continue_sentences">Continue sentences</string>
 
