--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -267,12 +267,14 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="speak_repeat">Repeat</string>
 
     <!-- Speak - Bible -->
-    <string name="conf_synchronize_first_window">Synchronize first window</string>
+    <string name="speak_speed_title">Speak speed</string>
+    <string name="conf_speak_synchronize_first_window">Synchronize first window</string>
     <string name="conf_speak_chapter_changes">Speak chapter changes</string>
+    <string name="conf_speak_continue_sentences">Continue sentences</string>
+    <string name="conf_speak_auto_bookmark">Auto bookmark on pause/stop</string>
+
     <string name="speak_book_changed">Book changed</string>
     <string name="speak_chapter_changed">Chapter</string>
-    <string name="conf_continue_sentences">Continue sentences</string>
-    <string name="speak_speed_title">Speak speed</string>
 
     <!-- User Notes -->
     <string name="mynotes">My Notes</string>
