--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -272,6 +272,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="conf_speak_chapter_changes">Speak chapter changes</string>
     <string name="conf_speak_continue_sentences">Continue sentences</string>
     <string name="conf_speak_auto_bookmark">Auto bookmark on pause/stop</string>
+    <string name="conf_speak_auto_bookmark_label">Auto bookmark with label</string>
 
     <string name="speak_book_changed">Book changed</string>
     <string name="speak_chapter_changed">Chapter</string>
