--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -273,7 +273,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="conf_speak_auto_bookmark">Auto bookmark on pause/stop</string>
     <string name="conf_speak_auto_bookmark_label">Auto bookmark with label</string>
 
-    <string name="speak_book_changed">Book changed</string>
+    <string name="speak_book_changed">Book changed. </string>
     <string name="speak_chapter_changed">Chapter</string>
 
     <!-- User Notes -->
