--- a/and-bible/app/src/main/res/values-fi/strings.xml
+++ b/and-bible/app/src/main/res/values-fi/strings.xml
@@ -270,4 +270,11 @@
   <string name="empty_list">Ei näytettävää</string>
   <string name="speak_book_changed">Kirja vaihtui. </string>
   <string name="speak_chapter_changed">Luku</string>
+
+  <string name="speak_first">Ensimmäinen</string>
+  <string name="speak_second">Toinen</string>
+  <string name="speak_third">Kolmas</string>
+  <string name="speak_fourth">Neljäs</string>
+  <string name="speak_fifth">Viides</string>
+
 </resources>
