--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -273,6 +273,10 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="conf_speak_auto_bookmark">Auto add bookmark on pause/stop and remove it when continuing</string>
     <string name="conf_speak_auto_bookmark_label">Label to be used with auto bookmarking</string>
 
+    <string name="conf_speak_titles">Speak titles</string>
+    <string name="conf_play_earcons">Play earcons (for titles)</string>
+    <string name="conf_replace_divinename">Replace divine name with Jahweh</string>
+
     <string name="speak_book_changed">Book changed. </string>
     <string name="speak_chapter_changed">Chapter</string>
     <string name="speak_first">First</string>
