Implement replace divine name feature

--- a/and-bible/app/src/main/res/values-fi/strings.xml
+++ b/and-bible/app/src/main/res/values-fi/strings.xml
@@ -276,5 +276,6 @@
   <string name="speak_third">Kolmas</string>
   <string name="speak_fourth">Neljäs</string>
   <string name="speak_fifth">Viides</string>
-
+  <string name="divineNameOriginal">Herra</string>
+  <string name="divineNameReplace">Jahve</string>
 </resources>
