--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -268,16 +268,18 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <!-- Speak - Bible -->
     <string name="speak_speed_title">Speak speed</string>
     <string name="conf_speak_synchronize_first_window">Synchronize first window</string>
-    <string name="conf_speak_chapter_changes">Speak chapter changes</string>
     <string name="conf_speak_continue_sentences">Speak complete sentences rather than verses</string>
     <string name="conf_speak_auto_bookmark">Auto add bookmark on pause/stop and remove it when continuing</string>
     <string name="conf_speak_auto_bookmark_label">Label to be used with auto bookmarking</string>
 
-    <string name="conf_speak_titles">Speak titles</string>
-    <string name="conf_play_earcons">Play earcons (for titles, chapter/book changes)</string>
+    <string name="conf_speak">Speak</string>
+    <string name="conf_play_earcons">Play earcons for</string>
     <string name="conf_replace_divinename">Replace divine name with Yahweh</string>
     <string name="conf_delay_on_paragraph_changes">Add delay on paragraph changes</string>
 
+    <string name="conf_change_book">Book changes</string>
+    <string name="conf_change_chapter">Chapter changes</string>
+    <string name="conf_change_title">Titles</string>
 
     <string name="divineNameOriginal">Lord</string>
     <string name="divineNameReplace">Yahweh</string>
