--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -281,6 +281,8 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="conf_change_chapter">Chapter changes</string>
     <string name="conf_change_title">Titles</string>
 
+    <string name="tts_status">Text to speech status</string>
+
     <string name="divineNameOriginal">Lord</string>
     <string name="divineNameReplace">Yahweh</string>
 
