--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -283,6 +283,12 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
 
     <string name="tts_status">Text to speech status</string>
 
+    <string name="conf_rewind_amount">Rewind/Forward amount</string>
+
+    <string name="conf_rewind_amount_one_verse">One verse</string>
+    <string name="conf_rewind_amount_ten_verses">Ten verses</string>
+    <string name="conf_rewind_amount_full_chapter">One chapter</string>
+
     <string name="divineNameOriginal">Lord</string>
     <string name="divineNameReplace">Yahweh</string>
 
