--- a/and-bible/app/src/main/res/values-fi/strings.xml
+++ b/and-bible/app/src/main/res/values-fi/strings.xml
@@ -278,4 +278,24 @@
   <string name="speak_fifth">Viides</string>
   <string name="divineNameOriginal">Herra</string>
   <string name="divineNameReplace">Jahve</string>
+  <string name="speak_speed_title">Puhenopeus</string>
+  <string name="conf_speak_synchronize_first_window">Synkronoi ensimmäinen ikkuna</string>
+  <string name="conf_speak_continue_sentences">Puhu kokonaisia lauseita jakeiden sijaan</string>
+  <string name="conf_speak_auto_bookmark">Lisää kirjanmerkki keskeytettäessä ja poista se jatkettaessa</string>
+  <string name="conf_speak_auto_bookmark_label">Lisää kirjanmerkki ryhmään</string>
+  <string name="conf_speak">Puhu</string>
+  <string name="conf_play_earcons">Soita äänimerkki</string>
+  <string name="conf_replace_divinename">Korvaa tetragrammi (Herra) sanalla Jahve</string>
+  <string name="conf_delay_on_paragraph_changes">Pidä tauko kappalevaihdoksissa</string>
+  <string name="conf_change_book">Kirjan vaihtuminen</string>
+  <string name="conf_change_chapter">Luvun vaihtuminen</string>
+  <string name="conf_change_title">Otsikot</string>
+  <string name="tts_status">Puhesyntetisoinnin tila</string>
+  <string name="conf_rewind_amount">Kelauksen määrä</string>
+  <string name="conf_rewind_amount_one_verse">1 jae</string>
+  <string name="conf_rewind_amount_ten_verses">10 jaetta</string>
+  <string name="conf_rewind_amount_full_chapter">1 luku</string>
+  <string name="conf_auto_rewind">Kelaa automaattisesti jatkettaessa</string>
+  <string name="add_widget">Lisää widget</string>
+  <string name="conf_rewind_amount_none">Ei yhtään</string>
 </resources>
