--- a/and-bible/app/src/main/res/values-fi/strings.xml
+++ b/and-bible/app/src/main/res/values-fi/strings.xml
@@ -276,8 +276,8 @@
   <string name="speak_third">Kolmas</string>
   <string name="speak_fourth">Neljäs</string>
   <string name="speak_fifth">Viides</string>
-  <string name="divineNameOriginal">Herra</string>
-  <string name="divineNameReplace">Jahve</string>
+  <string name="divinename_original">Herra</string>
+  <string name="divinename_replace">Jahve</string>
   <string name="speak_speed_title">Puhenopeus</string>
   <string name="conf_speak_synchronize_first_window">Synkronoi ensimmäinen ikkuna</string>
   <string name="conf_speak_continue_sentences">Puhu kokonaisia lauseita jakeiden sijaan</string>
