--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -267,8 +267,8 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
 
     <!-- Speak - Bible -->
     <string name="speak_speed_title">Speak speed</string>
-    <string name="conf_speak_synchronize_first_window">Synchronize first window</string>
-    <string name="conf_speak_continue_sentences">Speak complete sentences rather than verses</string>
+    <string name="conf_speak_synchronize_first_window">Synchronize first window while speaking</string>
+
     <string name="conf_speak_auto_bookmark">Auto add bookmark on pause/stop and remove it when continuing</string>
     <string name="conf_speak_auto_bookmark_label">Label to be used with auto bookmarking</string>
     <string name="restore_settings_from_bookmarks">Save / restore playback settings to/from auto-generated bookmarks</string>
@@ -303,8 +303,8 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="conf_speak_bookmarking_settings">Bookmarking settings</string>
     <string name="sleep_timer_started">Sleep timer started, %d minutes</string>
 
-    <string name="divineNameOriginal">Lord</string>
-    <string name="divineNameReplace">Yahweh</string>
+    <string name="divinename_original">Lord</string>
+    <string name="divinename_replace">Yahweh</string>
 
     <string name="speak_book_changed">Book changed. </string>
     <string name="speak_chapter_changed">Chapter</string>
