Add prev/next buttons to speak view

--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -368,4 +368,6 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="error_key_not_in_document">Not found in document</string>
     <string name="empty_list">No items to display</string>
     <string name="add_widget">Add widget</string>
+    <string name="speak_next">Next</string>
+    <string name="speak_previous">Previous</string>
 </resources>
