--- a/and-bible/app/src/main/res/values-fi/strings.xml
+++ b/and-bible/app/src/main/res/values-fi/strings.xml
@@ -276,8 +276,6 @@
   <string name="speak_third">Kolmas</string>
   <string name="speak_fourth">Neljäs</string>
   <string name="speak_fifth">Viides</string>
-  <string name="divinename_original">Herra</string>
-  <string name="divinename_replace">Jahve</string>
   <string name="speak_speed_title">Puhenopeus</string>
   <string name="conf_speak_synchronize_first_window">Synkronoi ensimmäinen ikkuna</string>
   <string name="conf_speak_continue_sentences">Puhu kokonaisia lauseita jakeiden sijaan</string>
@@ -310,4 +308,18 @@
   <string name="speak_next">Seuraava</string>
   <string name="speak_previous">Edellinen</string>
   <string name="widget_toggle_sleep_timer">Kytke uniajastin</string>
+  <string-array name="divinename_original">
+    <item>Herraan</item>
+    <item>Herra</item>
+    <item/>
+    <item/>
+    <item/>
+  </string-array>
+  <string-array name="divinename_replace">
+    <item>Jahveen</item>
+    <item>Jahve</item>
+    <item/>
+    <item/>
+    <item/>
+  </string-array>
 </resources>
