--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -269,7 +269,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="speak_speed_title">Speak speed</string>
     <string name="conf_speak_synchronize_first_window">Synchronize first window while speaking</string>
 
-    <string name="conf_speak_auto_bookmark">Auto add bookmark on pause/stop and remove it when continuing</string>
+    <string name="conf_speak_auto_bookmark">Auto add bookmark on pause/stop. If starting on bookmark, will move bookmark (that has correct label) to new location when stopping. </string>
     <string name="conf_speak_auto_bookmark_label">Label to be used with auto bookmarking</string>
     <string name="restore_settings_from_bookmarks">Save / restore playback settings to/from auto-generated bookmarks</string>
 
