--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -306,6 +306,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="speak_next">Next</string>
     <string name="speak_previous">Previous</string>
     <string name="widget_toggle_sleep_timer">Toggle sleep timer</string>
+    <string name="bookmarkwidget_helptext">Speak bookmarks shortcut buttons will appear here</string>
 
     <string-array name="divinename_original">
         <item>Lord</item>
