--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -269,11 +269,8 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="speak_speed_title">Speak speed</string>
     <string name="conf_speak_synchronize">Synchronize text with speech</string>
 
-    <string name="conf_speak_auto_bookmark">Auto add bookmark on pause/stop.
-        If starting on bookmark, will move bookmark (if it has speak label) to new location when stopping.
-        If verse has bookmark with multiple labels, only speak label will be updated.
-        </string>
-    <string name="restore_settings_from_bookmarks">Save / restore playback settings to/from auto-generated bookmarks</string>
+    <string name="conf_speak_auto_bookmark">Automatic bookmarking</string>
+    <string name="restore_settings_from_bookmarks">Save playback settings to bookmarks</string>
 
     <string name="conf_speak">Speak</string>
     <string name="conf_play_earcons">Play earcon sounds for</string>
@@ -297,6 +294,25 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="bookmarkwidget_helptext">Speak bookmarks shortcut buttons will appear here</string>
     <string name="sleep_timer_active_at">Sleep timer: %s minutes left.</string>
     <string name="speak_status_stopped">- stopped - </string>
+    <string name="speak_bookmark_help">Speak bookmark help</string>
+    <string name="speak_bookmark_help_message"><b>Automatic bookmarking</b>
+        \nAuto add bookmark when pausing and stopping.
+
+        Automatically generated bookmarks are labelled with special Speak label.
+        If you start on Speak-labeled bookmark, bookmark will be moved to new verse location when you next
+        time pause / stop. If there is Speak label and also other labels on bookmark, only Speak label
+        will be removed and bookmark will be left.
+        \n
+        \n<b>Save playback settings to bookmarks</b>\n
+        There are three <i>playback settings</i>: Speak (chapter changes / titles),
+        Play earcon sounds for (chapter changes / titles) and Speak speed.
+        If this option is enabled, those settings are saved to Speak bookmarks.
+        \n
+        \n <i>Usage example:</i> Let us say that you want to listen to Genesis and Romans.  You want to listen to
+        Genesis with speed 150%, and without interruptions between chapters. Then you also want to listen to
+        Romans with speed 90% and you want to be notified when chapter changes. You can have
+        independent playback settings for these books, when these settings are stored in bookmark.
+    </string>
 
     <string-array name="divinename_original">
         <item>Lord</item>
