--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -320,6 +320,5 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="error_page_too_large">Page is too large to be loaded</string>
     <string name="error_key_not_in_document">Not found in document</string>
     <string name="empty_list">No items to display</string>
-    <string name="download_documents">Downloading documents</string>
-    <string name="notification_channel_document_download_status">Document download</string>
+    <string name="notification_channel_progress_status">Progress status notification for document downloads etc.</string>
 </resources>
